svg fix on mobile menu -- firefox

--- a/wp-content/themes/brown-rudnick-main/assets/scss/global/_styles.scss
+++ b/wp-content/themes/brown-rudnick-main/assets/scss/global/_styles.scss
@@ -1638,6 +1638,7 @@ button.close__modal {
 	display: inline-block;
 	width: 49%;
 	padding-bottom: 40px;
+	text-align: center;
 	&.left{
 		border-right: 1px solid $darker-grey-two;
 	}
