--- a/wp-content/themes/brown-rudnick-main/assets/scss/modules/_footer.scss
+++ b/wp-content/themes/brown-rudnick-main/assets/scss/modules/_footer.scss
@@ -69,6 +69,7 @@
   display: inline-block;
   width: 66.6%;
   margin: 0 auto;
+  padding: 20px;
   text-align: center;
   vertical-align: middle;
 
